make me a report

--- a/app/Makefile
+++ b/app/Makefile
@@ -5,6 +5,7 @@ build:
 	./gradlew checkstyleMain
 	./gradlew checkstyleTest
 	./gradlew test
+	./gradlew jacocoTestReport
 	./gradlew build
 
 report:
